added new filter type CurrentUserType

--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -39,6 +39,7 @@ huh:
       - {name: auto_item, class: HeimrichHannot\FilterBundle\Filter\Type\AutoItemType, type: other}
       - {name: sort, class: HeimrichHannot\FilterBundle\Filter\Type\SortType, type: sort}
       - {name: external_entity, class: HeimrichHannot\FilterBundle\Filter\Type\ExternalEntityType, type: other}
+      - {name: current_member, class: HeimrichHannot\FilterBundle\Filter\Type\CurrentMemberType, type: other}
     templates:
       - {name: form_div_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_div_layout.html.twig'}
       - {name: form_table_layout, template: '@HeimrichHannotContaoFilter/filter/filter_form_table_layout.html.twig'}
