added filterTypes to backend selection

--- a/src/Resources/config/listener.yml
+++ b/src/Resources/config/listener.yml
@@ -3,7 +3,8 @@ services:
     public: true
     autowire: true
 
-  HeimrichHannot\FilterBundle\EventListener\LoadDataContainerListener: ~
+  HeimrichHannot\FilterBundle\EventListener\LoadDataContainerListener:
+    autoconfigure: true
 
   huh.filter.listener.dca.callback.filterconfigelement:
     class: HeimrichHannot\FilterBundle\EventListener\FilterConfigElementCallbackListener
