--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,4 +1,8 @@
 services:
+  _defaults:
+    public: true
+    autowire: true
+
   huh.form_type_extension:
     class: HeimrichHannot\FilterBundle\Form\Extension\FormTypeExtension
     tags:
@@ -73,11 +77,8 @@ services:
     arguments:
     - "@contao.framework"
 
-  huh.filter.choice.field_options:
-    class: HeimrichHannot\FilterBundle\Choice\FieldOptionsChoice
-    public: true
-    arguments:
-    - "@contao.framework"
+  HeimrichHannot\FilterBundle\Choice\FieldOptionsChoice: ~
+  huh.filter.choice.field_options: '@HeimrichHannot\FilterBundle\Choice\FieldOptionsChoice'
 
   huh.filter.choice.country:
     class: HeimrichHannot\FilterBundle\Choice\CountryChoice
