added template, started orm filter query

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -183,3 +183,5 @@ services:
   HeimrichHannot\FilterBundle\FilterType\FilterTypeCollection:
     arguments:
       - !tagged huh.filter.filter_type
+
+  huh.filter.filter_type.collection: '@HeimrichHannot\FilterBundle\FilterType\FilterTypeCollection'
