--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -45,6 +45,7 @@ services:
     - "@huh.filter.session"
     - "@doctrine.dbal.default_connection"
     - "@request_stack"
+  HeimrichHannot\FilterBundle\Config\FilterConfig: "@huh.filter.config"
 
   huh.filter.backend.filter_config_element:
     public: true
