refactored service loading in FilterTypes to ServiceSubscriber for better expandability, fixed contao 4.4 support

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -172,6 +172,7 @@ services:
 
   HeimrichHannot\FilterBundle\Type\Concrete\:
     resource: '../../Type/Concrete/*'
+    autoconfigure: true
     tags: ['huh.filter.type.concrete']
 
   HeimrichHannot\FilterBundle\Type\FilterTypeCollection:
