--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "symfony/property-access": "4.4||^5.4",
     "symfony/routing": "4.4||^5.4",
     "symfony/translation": "4.4||^5.4",
-    "twig/extensions": "^1.5",
+    "twig/extra-bundle": "^3.0",
     "ext-pdo": "*"
   },
   "require-dev": {
