--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "heimrichhannot/truncate-html": "^1.0",
     "symfony/config": "4.4||^5.4",
     "symfony/dependency-injection": "4.4||^5.4",
+    "symfony/event-dispatcher-contracts": "^1.0 || ^2.0 || ^3.0",
     "symfony/event-dispatcher": "4.4||^5.4",
     "symfony/form": "4.4||^5.4",
     "symfony/framework-bundle": "~3.4.26|^4.0",
