Update events for symfony 4+, add new event (#24)
* added event, updated events

* updated dependencies

* updated composer and changelog

--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
   "description": "A generic contao filter.",
   "license": "LGPL-3.0-or-later",
   "require": {
-    "php": "^7.1|^8.0",
+    "php": "^7.3|^8.0",
     "codefog/contao-haste": "^4.18",
-    "contao/core-bundle": "^4.4",
+    "contao/core-bundle": "^4.9",
     "heimrichhannot/contao-be_explanation-bundle": "^2.3",
     "heimrichhannot/contao-entity-filter-bundle": "^1.5",
     "heimrichhannot/contao-fieldpalette-bundle": ">=0.2 <2.0-dev",
@@ -16,8 +16,10 @@
     "heimrichhannot/truncate-html": "^1.0",
     "symfony/config": "4.4||^5.4",
     "symfony/dependency-injection": "4.4||^5.4",
+    "symfony/event-dispatcher-contracts": "^1.0 || ^2.0 || ^3.0",
     "symfony/event-dispatcher": "4.4||^5.4",
     "symfony/form": "4.4||^5.4",
+    "symfony/framework-bundle": "~3.4.26|^4.0",
     "symfony/http-foundation": "4.4||^5.4",
     "symfony/http-kernel": "4.4||^5.4",
     "symfony/intl": "4.4||^5.4",
