--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "A generic contao filter.",
   "license": "LGPL-3.0-or-later",
   "require": {
-    "php": "^7.3|^8.0",
+    "php": "^7.3||^8.0",
     "codefog/contao-haste": "^4.18",
     "contao/core-bundle": "^4.9",
     "heimrichhannot/contao-be_explanation-bundle": "^2.3",
@@ -14,24 +14,23 @@
     "heimrichhannot/contao-utils-bundle": "^2.0",
     "heimrichhannot/contao-twig-support-bundle": "^0.2.16||^1.0",
     "heimrichhannot/truncate-html": "^2.0",
-    "symfony/config": "4.4||^5.4",
-    "symfony/dependency-injection": "4.4||^5.4",
+    "symfony/config": "^4.4||^5.4",
+    "symfony/dependency-injection": "^4.4||^5.4",
     "symfony/event-dispatcher-contracts": "^1.0 || ^2.0 || ^3.0",
-    "symfony/event-dispatcher": "4.4||^5.4",
-    "symfony/form": "4.4||^5.4",
-    "symfony/framework-bundle": "~3.4.26|^4.0",
-    "symfony/http-foundation": "4.4||^5.4",
-    "symfony/http-kernel": "4.4||^5.4",
-    "symfony/intl": "4.4||^5.4",
-    "symfony/options-resolver": "4.4||^5.4",
-    "symfony/property-access": "4.4||^5.4",
-    "symfony/routing": "4.4||^5.4",
-    "symfony/translation": "4.4||^5.4",
+    "symfony/event-dispatcher": "^4.4||^5.4",
+    "symfony/form": "^4.4||^5.4",
+    "symfony/framework-bundle": "^4.4||^5.4",
+    "symfony/http-foundation": "^4.4||^5.4",
+    "symfony/http-kernel": "^4.4||^5.4",
+    "symfony/intl": "^4.4||^5.4",
+    "symfony/options-resolver": "^4.4||^5.4",
+    "symfony/property-access": "^4.4||^5.4",
+    "symfony/routing": "^4.4||^5.4",
+    "symfony/translation": "^4.4||^5.4",
     "twig/extra-bundle": "^3.0",
     "ext-pdo": "*"
   },
   "require-dev": {
-    "contao/core-bundle": "4.4.*",
     "heimrichhannot/contao-test-utilities-bundle": "^0.1",
     "contao/test-case": "1.1.*",
     "contao/manager-plugin": "^2.0",
