--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,9 @@
     "symfony/routing": "^4.4||^5.4",
     "symfony/translation": "^4.4||^5.4",
     "twig/extra-bundle": "^3.0",
+    "twig/html-extra": "^2.12||^3.0",
+    "twig/intl-extra": "^2.12||^3.0",
+    "twig/string-extra": "^2.12||^3.0",
     "ext-pdo": "*"
   },
   "require-dev": {
