--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "LGPL-3.0-or-later",
   "require": {
     "php": "^7.4 || ^8.0",
-    "codefog/contao-haste": "^4.18",
+    "codefog/contao-haste": "^4.18 || ^5.0",
     "contao/core-bundle": "^4.9",
     "heimrichhannot/contao-be_explanation-bundle": "^2.3",
     "heimrichhannot/contao-entity-filter-bundle": "^1.5",
