--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "symfony/routing": "^4.4||^5.4",
     "symfony/translation": "^4.4||^5.4",
     "symfony/translation-contracts": "^1.0 || ^2.0 || ^3.0",
+    "symfony/service-contracts": "^1.0 || ^2.0 || ^3.0",
     "twig/extra-bundle": "^3.0",
     "twig/html-extra": "^2.12||^3.0",
     "twig/intl-extra": "^2.12||^3.0",
