--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -6,7 +6,7 @@ services:
       $bundleConfig: '%huh.filter%'
 
   HeimrichHannot\FilterBundle\:
-    resource: '../../{Controller,DataContainer,EventListener}/*'
+    resource: '../../{Asset,Controller,DataContainer,EventListener}/*'
     exclude: '../../EventListener/{FilterConfigElementCallbackListener.php,HookListener.php,InsertTagsListener.php}'
     autoconfigure: true
     autowire: true
