--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "php": "^7.4 || ^8.0",
     "ausi/slug-generator": "^1.0",
     "codefog/contao-haste": "^4.18 || ^5.0",
-    "contao/core-bundle": "^4.9",
+    "contao/core-bundle": "^4.13 || ^5.0",
     "heimrichhannot/contao-be_explanation-bundle": "^2.3",
     "heimrichhannot/contao-encore-contracts": "^1.0",
     "heimrichhannot/contao-entity-filter-bundle": "^1.5",
