--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
     "php": "^7.4 || ^8.0",
     "ausi/slug-generator": "^1.0",
     "codefog/contao-haste": "^4.18 || ^5.0",
-    "contao/core-bundle": "^4.13 || ^5.0",
+    "contao/core-bundle": "^4.9",
     "heimrichhannot/contao-be_explanation-bundle": "^2.3",
     "heimrichhannot/contao-encore-contracts": "^1.0",
     "heimrichhannot/contao-entity-filter-bundle": "^1.5",
     "heimrichhannot/contao-fieldpalette-bundle": ">=0.6.12 <2.0-dev",
     "heimrichhannot/contao-multi-column-editor-bundle": "^2.0",
-    "heimrichhannot/contao-utils-bundle": "^2.226.0.",
+    "heimrichhannot/contao-utils-bundle": "^2.226",
     "heimrichhannot/contao-twig-support-bundle": "^0.2.16||^1.0",
     "heimrichhannot/truncate-html": "^2.0",
     "symfony/config": "^4.4||^5.4",
