--- a/composer.json
+++ b/composer.json
@@ -4,37 +4,39 @@
   "description": "A generic contao filter.",
   "license": "LGPL-3.0-or-later",
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.0",
     "ausi/slug-generator": "^1.0",
     "codefog/contao-haste": "^4.18 || ^5.0",
+    "codefog/tags-bundle": "^2.0 || ^3.3",
     "contao/core-bundle": "^4.13 || ^5.0",
-    "heimrichhannot/contao-be_explanation-bundle": "^2.3",
+    "heimrichhannot/contao-be_explanation-bundle": "^2.5@beta",
     "heimrichhannot/contao-encore-contracts": "^1.0",
-    "heimrichhannot/contao-entity-filter-bundle": "^1.5",
-    "heimrichhannot/contao-fieldpalette-bundle": ">=0.6.12 <2.0-dev",
+    "heimrichhannot/contao-entity-filter-bundle": "^1.11@beta",
+    "heimrichhannot/contao-fieldpalette-bundle": "^0.6.12 || ^1.0@beta",
     "heimrichhannot/contao-multi-column-editor-bundle": "^2.0",
-    "heimrichhannot/contao-utils-bundle": "^2.226",
-    "heimrichhannot/contao-twig-support-bundle": "^0.2.16||^1.0",
-    "heimrichhannot/truncate-html": "^2.0",
-    "symfony/config": "^4.4||^5.4",
-    "symfony/dependency-injection": "^4.4||^5.4",
+    "heimrichhannot/contao-utils-bundle": "^2.226 || ^3.0",
+    "symfony/config": "^4.4 || ^5.0 || ^6.0",
+    "symfony/dependency-injection": "^4.4 || ^5.0 || ^6.0",
     "symfony/event-dispatcher-contracts": "^1.0 || ^2.0 || ^3.0",
-    "symfony/event-dispatcher": "^4.4||^5.4",
-    "symfony/form": "^4.4||^5.4",
-    "symfony/framework-bundle": "^4.4||^5.4",
-    "symfony/http-foundation": "^4.4||^5.4",
-    "symfony/http-kernel": "^4.4||^5.4",
-    "symfony/intl": "^4.4||^5.4",
-    "symfony/options-resolver": "^4.4||^5.4",
-    "symfony/property-access": "^4.4||^5.4",
-    "symfony/routing": "^4.4||^5.4",
-    "symfony/translation": "^4.4||^5.4",
+    "symfony/event-dispatcher": "^4.4 || ^5.0 || ^6.0",
+    "symfony/form": "^4.4 || ^5.0 || ^6.0",
+    "symfony/framework-bundle": "^4.4 || ^5.0 || ^6.0",
+    "symfony/http-foundation": "^4.4 || ^5.0 || ^6.0",
+    "symfony/http-kernel": "^4.4 || ^5.0 || ^6.0",
+    "symfony/intl": "^4.4 || ^5.0 || ^6.0",
+    "symfony/options-resolver": "^4.4 || ^5.0 || ^6.0",
+    "symfony/property-access": "^4.4 || ^5.0 || ^6.0",
+    "symfony/routing": "^4.4 || ^5.0 || ^6.0",
+    "symfony/translation": "^4.4 || ^5.0 || ^6.0",
     "symfony/translation-contracts": "^1.0 || ^2.0 || ^3.0",
     "twig/extra-bundle": "^3.0",
-    "twig/html-extra": "^2.12||^3.0",
-    "twig/intl-extra": "^2.12||^3.0",
-    "twig/string-extra": "^2.12||^3.0",
+    "twig/html-extra": "^2.12 || ^3.0",
+    "twig/intl-extra": "^2.12 || ^3.0",
+    "twig/string-extra": "^2.12 || ^3.0",
     "ext-pdo": "*"
+  },
+  "__removed_dependencies": {
+    "heimrichhannot/truncate-html": "^2.0"
   },
   "require-dev": {
     "heimrichhannot/contao-test-utilities-bundle": "^0.1",
@@ -46,8 +48,7 @@
     "php-http/message-factory": "^1.0.2",
     "php-coveralls/php-coveralls": "^2.0",
     "symfony/phpunit-bridge": "^3.2",
-    "heimrichhannot/contao-categories-bundle": "^1.0-beta",
-    "codefog/tags-bundle": "^2.0"
+    "heimrichhannot/contao-categories-bundle": "^1.0-beta"
   },
   "conflict": {
     "contao/core": "*",
@@ -65,7 +66,7 @@
       "src/Resources/contao/dca/",
       "src/Resources/contao/languages/",
       "src/Resources/contao/templates/",
-      "doc"
+      "docs"
     ]
   },
   "autoload-dev": {
