--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -2,11 +2,12 @@ services:
   _defaults:
     public: true
     autowire: true
+    autoconfigure: true
     bind:
       $bundleConfig: '%huh.filter%'
 
   HeimrichHannot\FilterBundle\:
-    resource: '../../{Asset,Controller,DataContainer,EventListener}/*'
+    resource: '../../{Asset,Choice,Controller,DataContainer,EventListener,Util}/*'
     exclude: '../../EventListener/{FilterConfigElementCallbackListener.php,HookListener.php,InsertTagsListener.php}'
     autoconfigure: true
     autowire: true
@@ -29,9 +30,6 @@ services:
   huh.filter.manager:
     class: HeimrichHannot\FilterBundle\Manager\FilterManager
     public: true
-    arguments:
-    - "@contao.framework"
-    - "@huh.filter.session"
 
   HeimrichHannot\FilterBundle\Manager\FilterManager:
     alias: 'huh.filter.manager'
@@ -40,7 +38,6 @@ services:
   huh.filter.session:
     class: HeimrichHannot\FilterBundle\Session\FilterSession
     public: true
-    autowire: true
 
   HeimrichHannot\FilterBundle\Session\FilterSession:
     alias: 'huh.filter.session'
@@ -50,12 +47,7 @@ services:
     class: HeimrichHannot\FilterBundle\Config\FilterConfig
     shared: false
     public: true
-    arguments:
-    - "@service_container"
-    - "@contao.framework"
-    - "@huh.filter.session"
-    - "@doctrine.dbal.default_connection"
-    - "@request_stack"
+
   HeimrichHannot\FilterBundle\Config\FilterConfig: "@huh.filter.config"
 
   huh.filter.backend.filter_config_element:
@@ -72,14 +64,10 @@ services:
   huh.filter.choice.template:
     class: HeimrichHannot\FilterBundle\Choice\TemplateChoice
     public: true
-    arguments:
-    - "@contao.framework"
 
   huh.filter.choice.type:
     class: HeimrichHannot\FilterBundle\Choice\TypeChoice
     public: true
-    arguments:
-    - "@contao.framework"
 
   HeimrichHannot\FilterBundle\Choice\FieldOptionsChoice: ~
   huh.filter.choice.field_options: '@HeimrichHannot\FilterBundle\Choice\FieldOptionsChoice'
@@ -87,54 +75,39 @@ services:
   huh.filter.choice.country:
     class: HeimrichHannot\FilterBundle\Choice\CountryChoice
     public: true
-    arguments:
-    - "@contao.framework"
 
   huh.filter.choice.date:
     class: HeimrichHannot\FilterBundle\Choice\DateChoice
     public: true
-    arguments: ['@contao.framework', '@huh.utils.model']
 
   huh.filter.choice.language:
     class: HeimrichHannot\FilterBundle\Choice\LanguageChoice
     public: true
-    arguments:
-    - "@contao.framework"
 
   huh.filter.choice.locale:
     class: HeimrichHannot\FilterBundle\Choice\LocaleChoice
     public: true
-    arguments:
-    - "@contao.framework"
 
   huh.filter.choice.element:
     class: HeimrichHannot\FilterBundle\Choice\ElementChoice
     public: true
-    arguments:
-    - "@contao.framework"
 
   huh.filter.choice.year:
     class: HeimrichHannot\FilterBundle\Choice\YearChoice
     public: true
-    arguments: ['@service_container', '@huh.utils.model']
 
   huh.filter.choice.sort:
     class: HeimrichHannot\FilterBundle\Choice\SortChoice
     public: true
-    arguments:
-    - "@contao.framework"
 
   huh.filter.util.filter_config_element:
     class: HeimrichHannot\FilterBundle\Util\FilterConfigElementUtil
     public: true
-    arguments:
-    - "@contao.framework"
 
   huh.filter.util.filter_preselect:
     class: HeimrichHannot\FilterBundle\Util\FilterPreselectUtil
     public: true
-    arguments:
-    - "@contao.framework"
+
   HeimrichHannot\FilterBundle\Util\FilterPreselectUtil: '@huh.filter.util.filter_preselect'
 
   huh.filter.util.filter_ajax:
@@ -142,15 +115,15 @@ services:
     public: true
     autowire: true
 
-  twig.truncate.service:
-    class: Urodoz\Truncate\TruncateService
+  # twig.truncate.service:
+  #   class: Urodoz\Truncate\TruncateService
 
-  twig.extension.truncate.html:
-    class: Urodoz\Truncate\Bridge\Twig\TruncateExtension
-    arguments:
-    - "@twig.truncate.service"
-    tags:
-    - { name: twig.extension }
+  # twig.extension.truncate.html:
+  #   class: Urodoz\Truncate\Bridge\Twig\TruncateExtension
+  #   arguments:
+  #   - "@twig.truncate.service"
+  #   tags:
+  #   - { name: twig.extension }
 
   twig.extension.string:
     class: Twig\Extra\String\StringExtension
