refactor template loading of filter config template options

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -66,6 +66,7 @@ services:
   # choices
   huh.filter.choice.template:
     class: HeimrichHannot\FilterBundle\Choice\TemplateChoice
+    deprecated: ~
     public: true
     arguments:
     - "@contao.framework"
